--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,6 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -19,12 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y cmake ninja-build g++ libgtest-dev
-        # Build Google Test manually
-        cd /usr/src/gtest
-        sudo cmake -B build .
-        sudo cmake --build build
-        sudo cp build/libgtest*.a /usr/lib
+        sudo apt install -y cmake ninja-build g++
 
     - name: Configure project
       run: cmake -B build -G Ninja
@@ -33,5 +27,4 @@ jobs:
       run: cmake --build build
 
     - name: Run tests
-      run: ctest --test-dir build --output-on-failure
-
+      run: ctest --test-dir build --output-on-failure --verbose
