--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   server:
     build: .
@@ -13,6 +11,8 @@ services:
     build: .
     container_name: high-performance-client
     entrypoint: /usr/local/bin/fix_client
+    environment:
+      - SERVER_HOST=high-performance-server
     networks:
       - cpp-net
     depends_on:
